tests/compile_errors/012-collect-signature.buzz
| Expected `collect` method to be `fun collect() > void` got fun collect(str arg) > void
object Collectable {
    fun collect(str arg) > void {}
}